--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "SimpleCircularProgressExample",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "version": "1.0.0",
+  "author": {
+    "url": "https://github.com/umarmemon1910",
+    "name": "Umar Memon",
+    "email": "umarmemon.developer@gmail.com"
+  },
+  "homepage": "https://github.com/umarmemon1910",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -24,6 +28,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "rxjs": "~6.5.5",
+    "simple-circular-progress": "^1.0.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
